# moe-router-exploration

./: .gitignore  eval.py  main.py  main_router_prob_distribution.py  pyproject.toml  router_zero_experts_eval.sh  run_deepseek_moe.sh  run_gpt_oss.sh  run_multilingual_statistics.sh  run_router_distribution.sh  run_router_distribution_deepseek_moe.sh  run_router_distribution_gpt_oss.sh  run_router_distribution_olmoe.sh  run_router_distribution_trinity.sh  set_threads.sh  visualize.ipynb
dockers/: Dockerfile.lm_eval  Dockerfile.lm_eval_vllm
eval_results/moe_router_distribution_eval/deepseek-moe/: deepseek-moe_eval_results_0.0.json  deepseek-moe_eval_results_0.01.json  deepseek-moe_eval_results_0.05.json  deepseek-moe_eval_results_0.1.json
eval_results/moe_router_distribution_eval/gptoss/: gptoss_eval_results_0.0.json  gptoss_eval_results_0.01.json  gptoss_eval_results_0.05.json  gptoss_eval_results_0.1.json
eval_results/moe_router_distribution_eval/olmoe/: olmoe_eval_results_0.0.json  olmoe_eval_results_0.01.json  olmoe_eval_results_0.05.json  olmoe_eval_results_0.1.json
eval_results/moe_router_distribution_eval/trinity/: trinity_eval_results_0.0.json  trinity_eval_results_0.05.json  trinity_eval_results_0.1.json  trinity_eval_results_0.2.json  trinity_eval_results_0.3.json
eval_results/moe_router_distribution_eval/trinity_old/: trinity_eval_results_0.01_old.json  trinity_eval_results_0.0_old.json
src/: router_distribution_analysis.py  router_intervention.py  router_loading_utils.py  router_logger.py  sparse_utils.py  statisitics.py  utils.py  visualize.py
