[project]
name = "moe-router-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "einops>=0.8.1",
    "jupyter>=1.1.1",
    "marimo>=0.16.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[project.scripts]

notebook = "jupyter notebook --no-browser --ip 0.0.0.0 --port 8888"
