[project]
name = "moe-router-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "jupyter>=1.1.1",
    "kernels>=0.10.2",
    "marimo>=0.16.0",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    # on aarch64 Linux, build Triton from the GitHub tag:
    'triton @ git+https://github.com/openai/triton.git@v3.4.0; sys_platform == "linux" and platform_machine == "aarch64"',
    # on x86_64 Linux, grab Triton from PyPI:
    'triton==3.4.0; sys_platform == "linux" and platform_machine == "x86_64"',
]


[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'"
]
